Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,33 +1,36 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Reflect by DigitalInBlue</title>
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="Reflect : C++ Data Reflection Header-Only Library" />
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>Reflect</title>
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
-        <h1>Reflect</h1>
-        <p>C++ Data Reflection Header-Only Library</p>
 
-        <p class="view"><a href="https://github.com/DigitalInBlue/Reflect">View the Project on GitHub <small>DigitalInBlue/Reflect</small></a></p>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/DigitalInBlue/Reflect">View on GitHub</a>
 
+          <h1 id="project_title">Reflect</h1>
+          <h2 id="project_tagline">C++ Data Reflection Header-Only Library</h2>
 
-        <ul>
-          <li><a href="https://github.com/DigitalInBlue/Reflect/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/DigitalInBlue/Reflect/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/DigitalInBlue/Reflect">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/DigitalInBlue/Reflect/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/DigitalInBlue/Reflect/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <h1>
 <a name="reflect-c" class="anchor" href="#reflect-c"><span class="octicon octicon-link"></span></a>Reflect C++</h1>
 
@@ -67,12 +70,16 @@ As the emphasis of a value lies in its state not its identity, values can be cop
 
 <p>If the value whose reference lives inside Reflect goes out of scope, we can hope for an exception to be thrown.  Worst case, we march on referencing bad memory.  The Reference project contains googleTest code which demonstrates when exceptions can be expected:</p>
       </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/DigitalInBlue">DigitalInBlue</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Reflect maintained by <a href="https://github.com/DigitalInBlue">DigitalInBlue</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
+
               <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
@@ -83,6 +90,7 @@ As the emphasis of a value lies in its state not its identity, values can be cop
             pageTracker._trackPageview();
             } catch(err) {}
           </script>
+
 
   </body>
 </html>
